<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FAFAFA">

    <ImageButton
        android:id="@+id/imageButtonRetroceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#7E0000"
        android:contentDescription="@string/botonretroceder"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSede1"
        android:layout_width="331dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="30dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F1F7CF"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:translationX="210sp">

            <ImageView
                android:id="@+id/imageViewSede1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/hamburguesa" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewNombreSede1"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="Sede San Isidro"
            android:textColor="#6C6C6C "
            android:translationX="30dp"
            android:translationY="15dp" />

        <TextView
            android:id="@+id/textViewNombreDireccion1"
            android:layout_width="186dp"
            android:layout_height="31dp"
            android:fontFamily="@font/lato"
            android:text="Av. Primavera 545, San Borja 15037"
            android:textColor="#6C6C6C "
            android:translationX="30dp"
            android:translationY="40dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSede2"
        android:layout_width="331dp"
        android:layout_height="160dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:backgroundTint="#E8EB70"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:translationX="210sp"
            android:translationY="20dp">

            <ImageView
                android:id="@+id/imageViewSede2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/hamburguesa" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewNombreSede2"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="Sede Salaverry"
            android:textColor="#6C6C6C "
            android:translationX="30dp"
            android:translationY="15dp" />

        <TextView
            android:id="@+id/textViewNombreDireccion2"
            android:layout_width="186dp"
            android:layout_height="70dp"
            android:fontFamily="@font/lato"
            android:text="Real Plaza Salaverry, Nivel 3 Av Felipe San, Av. Gral. Salaverry 2370, Jesús María 15076"
            android:textColor="#6C6C6C "
            android:translationX="30dp"
            android:translationY="40dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSede3"
        android:layout_width="331dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F1F7CF"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:translationX="210sp">

            <ImageView
                android:id="@+id/imageViewSede3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/hamburguesa" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewNombreSede3"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="Sede Chacarilla"
            android:textColor="#6C6C6C "
            android:translationX="30dp"
            android:translationY="15dp" />

        <TextView
            android:id="@+id/textViewNombreDireccion3"
            android:layout_width="186dp"
            android:layout_height="31dp"
            android:fontFamily="@font/lato"
            android:text="Av. Primavera 545, San Borja 15037"
            android:textColor="#6C6C6C "
            android:translationX="30dp"
            android:translationY="40dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewEscogeSedeReservaMesaSede"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/lato"
        android:text="Escoge alguna de nuestras sedes"
        android:textAlignment="center"
        android:textColor="#6C6C6C "
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHolaReservaMesaSede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="176dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FAFAFA"
        android:fontFamily="@font/lato_bold"
        android:text="@string/holaReservaMesaSede"
        android:textColor="#7E0000"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewUsuarioCarta"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsuarioReservaMesaSede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="60dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FAFAFA"
        android:fontFamily="@font/lato_bold"
        android:text="@string/usuarioReservaMesaSede"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/laBistecca2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/la_bistecca_mesa_sede"
        android:textColor="#7E0000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pastaGrill2"
        android:layout_width="69dp"
        android:layout_height="18dp"
        android:layout_marginStart="261dp"
        android:fontFamily="@font/lato"
        android:text="@string/pasta_grill_mesa_sede"
        android:textColor="#6C6C6C "
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laBistecca2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="411dp"
        android:layout_height="72dp"
        app:backgroundTint="#7E0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>